--- a/intro_files/intro.css
+++ b/intro_files/intro.css
@@ -1,44 +1,24 @@
-.Body {
+* {
+    font-family: 'Helvetica', 'Arial', sans-serif;
     color: #000000;
-    font-family: 'Helvetica', 'Arial', 'sans-serif';
-    font-size: 12pt;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: normal;
-    letter-spacing: 0;
-    line-height: 14pt;
-    margin-bottom: 0pt;
-    margin-left: 0pt;
-    margin-right: 0pt;
-    margin-top: 0pt;
-    opacity: 1.00;
-    padding-bottom: 12pt;
-    padding-top: 0pt;
-    text-align: left;
-    text-decoration: none;
-    text-indent: 0pt;
-    text-transform: none;
 }
+.Body {
+    font-size: 12pt;
+    line-height: 15pt;
+}
+.Indent {
+    text-indent: 0.4in;
+}
+
 .Footnote_Text {
-    color: #000000;
-    font-family: 'Helvetica', 'Arial', 'sans-serif';
     font-size: 10pt;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: normal;
-    letter-spacing: 0;
     line-height: 12pt;
-    margin-bottom: 0pt;
-    margin-left: 0pt;
-    margin-right: 0pt;
-    margin-top: 0pt;
-    opacity: 1.00;
     padding-bottom: 10pt;
-    padding-top: 0pt;
-    text-align: left;
-    text-decoration: none;
-    text-indent: 0pt;
-    text-transform: none;
+}
+.FootnoteRegion a {
+    font-size: 7pt;
+    vertical-align: super;
+    line-height: 7pt;
 }
 .Normal_22 {
     width: 468pt;
@@ -53,11 +33,48 @@
     margin-top: 1em;
     padding-top: 0.5em;
 }
+
 div {
     overflow: visible;
 }
 img {
     border: none;
 }
-.searchtext {
+blockquote {
+    margin-left: 36pt;
+    text-indent: 0pt;
+}
+p {
+    margin: 0;
+}
+h1 {
+    font-size: 17pt;
+    font-weight: bold;
+	margin-top: 12pt;
+}
+h2 {
+    font-size: 13pt;
+    font-weight: normal;
+}
+
+.FootnoteLink {
+    font-size: 8pt;
+    vertical-align: super;
+    line-height: 8pt;
+}
+#TopLeftGraphic {
+    position: absolute;
+    top: 1ex;
+    left: 1ex;
+    background-color: white;
+    border: solid medium;
+    border-color: #cd5;
+}
+#HomeLink {
+    position: absolute;
+    font-size: small;
+    color: #cd5;
+    top: 60pt;
+    left: 3ex;
+    font-weight: bold;
 }
