--- a/intro_files/intro.css
+++ b/intro_files/intro.css
@@ -56,6 +56,9 @@ h2 {
     font-size: 13pt;
     font-weight: normal;
 }
+h3 {
+    font-size: 13pt;
+}
 
 .FootnoteLink {
     font-size: 8pt;
@@ -70,11 +73,9 @@ h2 {
     border: solid medium;
     border-color: #cd5;
 }
-#HomeLink {
+.HomeLink {
     position: absolute;
     font-size: small;
     color: #cd5;
-    top: 60pt;
-    left: 3ex;
     font-weight: bold;
 }
