methods.html: clean up the list of editions and the paragraph before it.
Rendered content is the same except for a slight difference
in line height in the list and the preceding paragraph.

--- a/intro_files/intro.css
+++ b/intro_files/intro.css
@@ -60,6 +60,14 @@ h3 {
     font-size: 13pt;
 }
 
+ul.Plain {
+	list-style-type: none;
+	padding-left: 0pt;
+}
+ul.Plain li {
+	margin-bottom: 12pt;
+}
+
 .FootnoteLink {
     font-size: 8pt;
     vertical-align: super;
