methods.html: use named character entities for quotation marks; delete extraneous horizontal space.
Change the CSS style of the edition list to create a hanging indent,
and remove the spacing inserted to create a hanging indent in the
list item describing the 1950 ML edition.

Remove trailing space on paragraphs.

No difference in rendered text except for the line describing the 1950 ML edition.

--- a/intro_files/intro.css
+++ b/intro_files/intro.css
@@ -62,10 +62,11 @@ h3 {
 
 ul.Plain {
 	list-style-type: none;
-	padding-left: 0pt;
+	padding-left: 0.4in;
 }
 ul.Plain li {
 	margin-bottom: 12pt;
+	text-indent: -0.4in;
 }
 
 .FootnoteLink {
