methods.html: redo "Design and Editorial Goals" list as a numbered list with nested bulleted lists.
Changes in rendered HTML:
  - Slightly different margins above bold subheadings <h3>.
  - Different formatting of "Design and Editorial Goals" section.

--- a/intro_files/intro.css
+++ b/intro_files/intro.css
@@ -58,6 +58,7 @@ h2 {
 }
 h3 {
     font-size: 13pt;
+	margin-top: 0.4in;
 }
 
 ul.Plain {
@@ -67,6 +68,10 @@ ul.Plain {
 ul.Plain li {
 	margin-bottom: 12pt;
 	text-indent: -0.4in;
+}
+
+.LongList li {
+	margin-top: 1em;
 }
 
 .FootnoteLink {
